2008-03-14  Eric B. Weddington  <eric.weddington@atmel.com>

	* configure.ac: Add support for ATmega32C1.
	* devtools/gen-avr-lib-tree.sh: Ditto.
	* doc/api/main_page.dox: Ditto.
	* doc/api/using-tools.dox: Ditto.
	* include/avr/Makefile.am: Ditto.
	* include/avr/io.h: Ditto.
	* include/avr/power.h: Ditto.
	* include/avr/wdt.h: Ditto.
	* include/avr/iom32c1.h: New file.
	* NEWS: Add new device to list.

2008-03-12  Anatoly Sokolov <aesok@post.ru>

	* doc/TODO: Update.

2008-03-12  Anatoly Sokolov <aesok@post.ru>

	* crt1/gcrt1.S (__do_copy_data): Don't use for GCC 4.4 and up.

2008-03-11  Anatoly Sokolov <aesok@post.ru>

	* devtools/Makefile.am (EXTRA_DIST): Add 'Architecture.am', 'Avr.am', 
	'Device.am' and 'Lib.am'.
    
2008-03-10  Eric B. Weddington  <eric.weddington@atmel.com>

	* configure.ac: Add support for ATmega32M1 device.
	* devtools/gen-avr-lib-tree.sh: Ditto.
	* doc/api/main_page.dox: Ditto.
	* doc/api/using-tools.dox: Ditto.
	* include/avr/Makefile.am: Ditto.
	* include/avr/io.h: Ditto.
	* include/avr/power.h: Ditto.
	* include/avr/wdt.h: Ditto.
	* include/avr/iom32m1.h: New file.
	* NEWS: Add new device to list.

2008-03-09  Anatoly Sokolov <aesok@post.ru>

	* devtools/gen-avr-lib-tree.sh: Use 'Avr.am', 'Lib.am' and 
	'Architecture.am' as template for 'avr/Makefile.am', 
	'avr/lib/Makefile.am' and 'avr/lib/Architecture/Makefile.am'.
	* devtools/Architecture.am: New file.
	* devtools/Avr.am: New file.
	* devtools/Lib.am: New file.

2008-03-09  Dmitry Xmelkov  <dmix@gmail.ru>

	* include/avr/eeprom.h: eeprom_write_byte(): add EECR clearning
	to force erase_and_write programming mode. Document this and add
	note about necessarity SELFPRGEN polling.

2008-03-08  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #22493.
	* include/avr/iom1284p.h: Fix typo.

2008-03-03  Anatoly Sokolov <aesok@post.ru>

	* devtools/gen-avr-lib-tree.sh: Use devtools/Device.am as template 
	for dev/Makefile.am.
	* devtools/Device.am: New file.
