@@ -28,12 +28,17 @@
 
 /* $Id$ */
 
-/* double atof (const char *nptr);
-     The atof() function converts the initial portion of the string
-     pointed to by nptr to double. The behaviour is the same as
-	    strtod(nptr, (char **)0);
-     except that atof() does not detect errors.
+/** \ingroup avr_stdlib
+    \fn  double atof (const char *nptr)
+
+    The atof() function converts the initial portion of the string pointed
+    to by \a nptr to double representation.
+
+    It is equivalent to calling
+	\code strtod(nptr, (char **)0); \endcode
  */
+
+#ifndef	__DOXYGEN__
 
 #include "macros.inc"
 
@@ -47,3 +52,4 @@ atof:
 
 	.size atof, .-atof
 	.end
+#endif	/* !__DOXYGEN__ */
